# industrial-scanner-logger

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  scanner_tcp_receiver.py
.github/workflows/: ci.yml
config/: industrial-scanner-logger.conf
db/: schema.sql
html/: index.html
html/assets/: site.css
html/health/: index.html
html/logs/: index.html
html/pending-orders/: index.html
html/search/: index.html
html/tv-dashboard/: index.html
nginx/: industrial-scanner-logger.conf
scripts/: install.sh  install_service.sh  live-scanner-log  refresh-app-config  refresh-nginx-config  uninstall.sh  uninstall_service.sh  update-readme-badges  update-services
src/industrial_scanner_logger/: __init__.py  _version.py  api.py  receiver.py
systemd/: industrial-scanner-logger-api.service  industrial-scanner-logger.env  industrial-scanner-logger.service
tests/: test_api.py  test_receiver.py
