[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "industrial-scanner-logger"
dynamic = ["version"]
description = "TCP receiver and CSV logger for Honeywell HF811 industrial scanner data."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["barcode", "scanner", "tcp", "csv", "logger", "honeywell"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Logging",
]
dependencies = []

[project.optional-dependencies]
dev = ["ruff>=0.8"]

[project.scripts]
scanner-tcp-receiver = "industrial_scanner_logger.receiver:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "industrial_scanner_logger._version.__version__"}

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
